--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,7 +4,18 @@
 	</header>
 
 	<header>
-		<h2><%= @ticket.name %></h2>	
+		<h2><%= @ticket.name %></h2>
+
+		<table id="attributes">
+			<tr>
+				<th>Author:</th>			
+				<td><%= @ticket.author.email %></td>
+			</tr>
+			<tr>
+				<th>Created:</th>			
+				<td><%= time_ago_in_words(@ticket.created_at) %></td>
+			</tr>			
+		</table>	
 
 		<ul class="actions">
 			<li><%= link_to "Edit Ticket", [:edit, @project, @ticket],
