Add the ability to create users through the admin backend

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
       <li class="<%= "active" if current_page?("/") %>">
       <%= link_to "Home", root_path %>
       </li>
+      <% admins_only do %>
+        <%= link_to "Admin", admin_root_path %>
+      <% end %>
       <% unless user_signed_in? %>
         <li class="<%= "active" if current_page?("/users/signup") %>">
         <%= link_to "Sign up", new_user_registration_path %>
