--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       <%= link_to "Home", root_path %>
       </li>
       <% admins_only do %>
-        <%= link_to "Admin", admin_root_path %>
+      <li><%= link_to "Admin", admin_root_path %></li>
       <% end %>
       <% unless user_signed_in? %>
         <li class="<%= "active" if current_page?("/users/signup") %>">
