--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -18,8 +18,10 @@
 		</table>	
 
 		<ul class="actions">
+			<% if policy(@ticket).update? %>
 			<li><%= link_to "Edit Ticket", [:edit, @project, @ticket],
 			class: "edit" %></li>
+			<% end %>
 			<li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
 			data: {confirm: "Are you sure want to delete this ticket?"},
 			class: "delete" %></li>			
