--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -14,7 +14,13 @@
 			<tr>
 				<th>Created:</th>			
 				<td><%= time_ago_in_words(@ticket.created_at) %></td>
-			</tr>			
+			</tr>
+			<% if @ticket.state.present? %>
+				<tr>
+					<th>State:</th>
+					<td><%= render @ticket.state %></td>
+				</tr>
+			<% end %>			
 		</table>	
 
 		<ul class="actions">
